--- a/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
@@ -237,7 +237,7 @@
  concept_leader_trait_legendary_leader: "$leader_trait_legendary_leader$"
  concept_leader_trait_legendary_leader_desc: "$THIS_LEADER_TXT$:$TABBED_NEW_LINE$- $MOD_LEADER_LIFESPAN_ADD$: §G+40§!$TABBED_NEW_LINE$- เลเวลเริ่มต้นของผู้นำ: §G+3§!$TABBED_NEW_LINE$- สามารถเลือกคุณลักษณะเฉพาะ §Iผู้นำในตำนาน§! ตั้งแต่เริ่ม\n\n$EMPIRE_EFFECTS_TXT$$TABBED_NEW_LINE$- $MOD_PLANET_STABILITY_ADD$: §G+1.5§!$TABBED_NEW_LINE$- $mod_planet_jobs_unity_produces_mult$: §G+3%§!\n\n§Gความเป็นผู้นำในตำนานจะเพิ่มขึ้นตามกาลเวลา§!\n\n§LThe Unification Wars were a brutal affair. In the end, the Luminary brought peace and purpose to us all. The Luminary is the living symbol of what our species can achieve, and an inspiration to all.§!"
  concept_perfected_genes: "$trait_perfected_genes$"
- concept_perfected_genes_desc: "- $MOD_LEADER_LIFESPAN_ADD$: §G+25§!\n- $MOD_LEADER_SPECIES_EXP_GAIN$: §R-15%§!\n\n§L$trait_perfected_genes_desc$§!"
+ concept_perfected_genes_desc: "- $MOD_LEADER_LIFESPAN_ADD$: §G+25§!\n- $MOD_LEADER_SPECIES_EXP_GAIN$: §R-20%§!\n\n§L$trait_perfected_genes_desc$§!"
  concept_angler: "$job_angler_plural$"
  concept_angler_desc: "$job_angler_plural$ are §IFarmer§! Jobs that produce $i_food$ and $i_trade_value$.\n\n§L$job_angler_desc$§!"
  concept_pearl_diver: "$job_pearl_diver_plural$"
@@ -377,11 +377,11 @@
  concept_symbiosis_nexus: "$symbiosis_nexus$"
  concept_symbiosis_nexus_desc: "['concept_symbiosis_integrator',$job_symbiosis_integrator_plural_with_icon$]: §G+2§!\n\nCan be upgraded."
  concept_adventurous_spirit_trait: "$leader_trait_adventurous_spirit$"
- concept_adventurous_spirit_trait_desc: "$leader_trait_adventurous_spirit_1_tt$\n\n§L$leader_trait_adventurous_spirit_desc$§!"
+ concept_adventurous_spirit_trait_desc: "$leader_trait_adventurous_spirit_3_tt$\n\n§L$leader_trait_adventurous_spirit_desc$§!"
  concept_megastructure_grand_archive: "$grand_archive$"
  concept_megastructure_grand_archive_desc: "- Allows the display of acquired ['concept_specimen',Specimens].\n- Vivarium Capacity: §G+$@grand_archive_vivarium_capacity$§!\n\n§LThe Grand Archive preserves and exhibits the most valuable artifacts we have collected throughout the galaxy. Reserved within is also a dedicated Vivarium for live Space Fauna containment and observation.§!"
  concept_beastport: "$sm_beastport$"
- concept_beastport_desc: "- Replaces §Y$sm_hatchery$§! Starbase Building\n- Can build Civilian Ships along with cloning Space Fauna using ['concept_dna']."
+ concept_beastport_desc: "- Replaces ['concept_hatchery'] Starbase Building\n- Can build Civilian Ships along with cloning Space Fauna using $c_dna$."
  concept_xeno_geology_holomuseum: "$xeno_geology_holomuseum$"
  concept_xeno_geology_holomuseum_desc: "$xeno_geology_holomuseum_desc$"
  concept_aesthetic_wonders_holomuseum: "$aesthetic_wonders_holomuseum$"
