--- a/mod/thmod/localisation/english/concepts_l_english.yml
+++ b/mod/thmod/localisation/english/concepts_l_english.yml
@@ -17,7 +17,10 @@
  concept_ascension_perks: "การยกระดับ"
  concept_ascension_perks_desc: "การยกระดับให้โบนัสอย่างมีนัยสำคัญต่อจักรวรรดิ ซึ่งจะเปลี่ยนวิธีเล่นไปโดยสิ้นเชิง"
  concept_dna: "$genetic_material$"
- concept_dna_desc: "§Y$genetic_material_w_icon$§! allows us to clone spaceborne organisms for use as military fleets. Higher grade genetic material unlocks the cloning of higher grade §YSpace Fauna§! at ['concept_hatchery',Hatcheries]. Genetic Material can be collected in the wild with ['technology:tech_gravity_wells', £physics£$tech_gravity_wells$] and by breeding in the ['concept_vivarium']."
+ concept_dna_desc: "$y_dna$ ช่วยให้เราสามารถโคลนสิ่งมีชีวิตในอวกาศเพื่อใช้เป็นกองยานทหารได้ วัสดุทางพันธุกรรมเกรดสูงปลดล็อคการโคลน §Yสัตว์อวกาศ§! เกรดสูงได้ที่ ['concept_hatchery',Hatcheries]\n\nสามารถเก็บรวบรวมวัสดุทางพันธุกรรมด้วยเทคโนโลยี £physics£ ['technology:tech_gravity_wells'] และการเพาะพันธุ์ใน ['concept_vivarium']"
+ c_dna: "£genetic_material£ ['concept_dna']"
+ y_dna: "£genetic_material£ §Y$genetic_material$§!"
+ w_dna: "£genetic_material£ $genetic_material$"
  concept_edict: "ประกาศคำสั่ง"
  concept_edicts: "ประกาศคำสั่ง"
  concept_edicts_desc: "ประกาศคำสั่งคือการตัดสินใจบางอย่างซึ่งมีผลบังคับใช้ทั่วทั้งจักรวรรดิ โดยการใช้ทรัพยากรหรือจ่ายเป็นค่าบำรุงรักษารายเดือน โดยทั่วไป ค่าใช้จ่ายเหล่านี้จะจ่ายเป็น $i_unity$ หรือ ['concept_edict_fund'] แต่คำสั่งบางอย่าง อาจต้องจ่ายเป็นทรัพยากรอื่นๆแทน"
@@ -47,7 +50,7 @@
  concept_guaranteed_colonies: "$FE_GUARANTEED_COLONIES$"
  concept_guaranteed_colonies_desc: "This controls how many habitable planets of the same planet class as your homeworld are guaranteed to spawn close to your starting system. Turning this off may mean you will find no habitable worlds near your homeworld at all."
  concept_hatchery: "$sm_hatchery$"
- concept_hatchery_desc: "§YHatcheries§! allow us to incubate our collected §Y$genetic_material_w_icon$§! to clone §YSpace Fauna§! for use as military fleets."
+ concept_hatchery_desc: "§YHatcheries§! allow us to incubate our collected $c_dna$ to clone §YSpace Fauna§! for use as military fleets."
  concept_hyperlane: "ไฮเปอร์เลน"
  concept_hyperlanes: "ไฮเปอร์เลน"
  concept_hyperlanes_desc: "ไฮเปอร์เลนเป็นทางย่อยที่เกิดขึ้นตามธรรมชาติซึ่งก่อตัวขึ้นระหว่างปล่องแห่งแรงโน้มถ่วงของดวงดาว(Gravity Well) การใช้ไฮเปอร์ไดรฟ์เพื่อเดินทางตามไฮเปอร์เลนเป็นวิธีการหลักในการเดินทางระหว่างดวงดาว"
