--- a/mod/thmod/localisation/english/cosmic_storms_l_english.yml
+++ b/mod/thmod/localisation/english/cosmic_storms_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
  COSMIC_STORMS_TITLE: "Cosmic Storms"
+ DLC_COSMIC_STORMS_RECOMMENDATION_DESC: "We're recommending §S$COSMIC_STORMS_TITLE$§! as some of the choices you've selected suit its content."
  EMPIRE_DESIGN_YATUNAN_RADICALS: "Yatunan Radicals"
  PRESCRIPTED_adjective_yatunan_radicals: "Yatunan"
  PRESCRIPTED_ship_prefix_yatunan_radicals: "RAD"
@@ -218,13 +219,14 @@
  storm_hunkered_down_modifier_tt: "เพิ่ม §Rค่าบำรุงรักษา§! เป็นสองเท่า แต่ยังเพิ่ม §Gประสิทธิภาพ§! §Y$building_storm_resistant_production$§! และ §Y$building_advanced_storm_resistant_production$§! เป็นสองเท่าอีกด้วย"
  storm_hunkered_down_modifier_disabled_tt: "Ends the $decision_hunker_down$ decision. Halves §Gupkeep§! costs, but also returns the §Reffectiveness§! of the §Y$building_storm_resistant_production$§! and §Y$building_advanced_storm_resistant_production$§! to their original values."
  cultivated_worldscaping_modifier: "$decision_cultivated_worldscaping$"
+ cultivated_worldscaping_modifier_desc: "The landscape has been altered to create a sublime geometric experience, prioritizing form over life. Any remaining flora has been reduced to a monoculture to eliminate discordant elements."
  cultivated_worldscaping_modifier_tt: "- จำนวนเขตสูงสุด §Y+3§!\n- เขตทรัพยากรสูงสุด §G+75%§!\n- การป้องกัน §Y$default_storm$§! §G+10%§!\n- การอยู่อาศัยได้ §R-20%§!"
  decision_hunker_down: "เตรียมตัวรับมือพายุ"
  decision_hunker_down_desc: "Fearing the worst, the inhabitants of this planet will take any and all precautions against the effects of cosmic storms."
  decision_stop_hunker_down: "ยุติ $decision_hunker_down$"
  decision_stop_hunker_down_desc: "Once the danger of the cosmic storm has passed, we can relax our precautions. But will things ever truly return to 'normal'?"
  decision_cultivated_worldscaping: "ปรับแต่งภูมิทัศน์ดาวเพาะปลูก"
- decision_cultivated_worldscaping_desc: "ทำดาวนี้ให้กลายเป็นบ้านที่สมบูรณ์แบบของเรากันดีกว่า"
+ decision_cultivated_worldscaping_desc: "ทำดาวนี้ให้กลายเป็นบ้านที่มีความสมดุลย์และสมบูรณ์แบบของเรากันดีกว่า การสังเกตรูปทรงเรขาคณิตอันบริสุทธิ์ของภูมิประเทศจะนำมาซึ่งความปลอดโปร่ง"
  decision_cultivated_worldscaping_natural_blockers_fail_tt: "ต้องลบสิ่งกีดขวาง £blocker£ ทั้งหมดออก"
  civic_astrometeorology: "อุตุนิยมวิทยาดาราศาสตร์"
  civic_astrometeorology_desc: "With deep respect for the forces of nature, this species goes to great lengths to uncover the inner workings of environmental phenomena. As they set out across the stars, they take with them a particular interest in astrometeorology. Central to their ambitions are the most fantastic and potentially destructive of all astronomical events, the cosmic storms themselves.\n"
@@ -1256,7 +1258,7 @@
  collided_planet_desc: "Two planets crashed into one, and rather than destroying each other, they have become entangled. While boasting increased usable surface area, the world poses unique habitation and building challenges."
  wooden_planet: "Arboreal World"
  wooden_planet_desc: "Over thousands of years, this planet's crust has become a dense layer of roots several kilometers thick, making it one titanic living organism."
- wooden_planet_tt: "Housing costs £food£ to build and upkeep.\nFarms cost £food£ to build."
+ wooden_planet_tt: "Housing costs $w_food$ to build and upkeep.\nFarms cost $w_food$ to build."
  mod_planet_miners_rare_crystals_produces_mult: "£rare_crystals£ $rare_crystals$ จาก £job_miner£ [GetMinerPlural]"
  mod_planet_miners_rare_crystals_produces_add: "$mod_planet_miners_rare_crystals_produces_mult$"
  mod_planet_farmers_volatile_motes_produces_add: "£volatile_motes£ $volatile_motes$ from £job_farmer£ [GetFarmerPlural]"
@@ -1454,7 +1456,7 @@
  cstorms.1745.name: "$d_sky_mountain$"
  cstorms.1745.desc: "A severe §Y$gravity_storm$§! caused an extraordinary transformation of §H[this.GetName]§!'s landscape. The storm's powerful gravitational fluctuations severed the planet's largest mountain from its tectonic shelf, lifting it vertically above the planet.\n\nIt remains suspended in the upper atmosphere, held aloft by a residual gravitational effect of the storm. This remarkable upheaval has exposed previously inaccessible ore reserves in the bedrock underneath, as well as providing [owner.GetResearchers] with much to analyze."
  cstorms.1755.name: "Melting Glaciers"
- cstorms.1755.desc.common: "The recent [this.GetAffectedStormType] has had an unexpected impact on the climate of [this.GetName]."
+ cstorms.1755.desc.common: "The recent §Y[this.GetAffectedStormType]§! has had an unexpected impact on the climate of [this.GetName]."
  cstorms.1755.desc.electric: "The increased electrical charge in the atmosphere has led to a drastic temperature shift in the polar region, $cstorms.1755.desc.common_2$"
  cstorms.1755.desc.particle: "The corrosive effect of the storm's particles has heavily impacted the polar regions, $cstorms.1755.desc.common_2$"
  cstorms.1755.desc.gravity: "The gravitational shifts brought on by the storm have shattered multiple layers of subaquatic ice, $cstorms.1755.desc.common_2$"
