--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -128,8 +128,8 @@
  NUM_HOUSING_NOT_TRIGGER:1 "Planet housing ($VALUE1|0Y$) is NOT $COMPARE$ $VALUE2|0Y$"
  HAS_SECTOR_FOCUS:0 "Has sector focus $SECTOR_FOCUS$"
  HAS_NOT_SECTOR_FOCUS:0 "Does NOT have sector focus $SECTOR_FOCUS$"
- IS_SECTOR_CAPITAL:0 "Is a sector capital"
- IS_NOT_SECTOR_CAPITAL:0 "Is NOT a sector capital"
+ IS_SECTOR_CAPITAL:0 "เป็นศูนย์กลางของเซ็กเตอร์"
+ IS_NOT_SECTOR_CAPITAL:0 "ไม่เป็นศูนย์กลางของเซ็กเตอร์"
  SET_SECTOR_CAPITAL_EFFECT:0 "Sets planet to capital of sector"
  SET_SECTOR_FOCUS_EFFECT:0 "Sets the sector focus to $SECTOR_FOCUS$"
  SET_COLONY_DESIGNATION_EFFECT:0 "Sets the colony type to $COLONY_DESIGNATION$"
