--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
  FEDERATIONS_TITLE: "Federations"
+ DLC_FEDERATIONS_RECOMMENDATION_DESC:0 "§SFederations§! is an expansion that focuses on diplomacy."
+ DLC_FEDERATIONS_RECOMMENDATION_REC:1 "We're recommending §SFederations§! as some of the variables you've selected suit its themes of interstellar alliances and diplomacy."
  IS_YOU:1 "นี่คือคุณ"
  ORIGIN:0 "จุดเริ่มต้น"
  EMPIRE_ORIGIN:0 "$ORIGIN$"
