--- a/mod/thmod/localisation/english/grand_archive_l_english.yml
+++ b/mod/thmod/localisation/english/grand_archive_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
  GRAND_ARCHIVE_TITLE: "Grand Archive"
+ DLC_GRAND_ARCHIVE_RECOMMENDATION_DESC: "We're recommending §S$GRAND_ARCHIVE_TITLE$§! as some of the choices you've selected suit its content."
  grand_archive: "Grand Archive"
  the_grand_archive: "The Grand Archive"
  grand_archive_0: "$grand_archive$"
@@ -88,7 +89,7 @@
  gateway_gravity_snare_capacity: "§HGravity Snare Capacity Path§!\n§EThis technology will lead to further advancements in Gravity Snares capture capacity.§!"
  tech_alien_cloning: "การเพาะพันธุ์เอเลี่ยน"
  tech_alien_cloning_beastmasters: "$tech_alien_cloning$"
- tech_alien_cloning_desc: "In a carefully controlled environment, we can incubate the ['concept_dna', $genetic_material_w_icon$] collected from culled §YSpace Fauna§! and produce new members of each species under our command."
+ tech_alien_cloning_desc: "In a carefully controlled environment, we can incubate the $genetic_material$ collected from culled Space Fauna and produce new members of each species under our command."
  feature_alien_cloning_unlocked: "นโยบาย §Y$policy_space_fauna_growth$§!"
  feature_alien_cloning_unlocked_desc: "$policy_space_fauna_growth_desc$"
  tech_alien_cloning_tt: "§HUnlocks Feature:§! Corvette-Scale Space Fauna Cloning"
@@ -149,6 +150,7 @@
  MOD_EXTRA_LARGE_SPACE_FAUNA_SHIP_HULL_MULT: "Huge $SPACE_FAUNA_HULL$"
  MOD_TITANIC_SPACE_FAUNA_SHIP_HULL_MULT: "Gigantic $SPACE_FAUNA_HULL$"
  SPACE_FAUNA_SHIP_COST: "Space Fauna Ship Cloning Cost"
+ MOD_SPACE_FAUNA_SHIP_COST_MULT: "$SPACE_FAUNA_SHIP_COST$"
  MOD_SMALL_SPACE_FAUNA_SHIP_COST_MULT: "Small $SPACE_FAUNA_SHIP_COST$"
  MOD_MEDIUM_SPACE_FAUNA_SHIP_COST_MULT: "Medium $SPACE_FAUNA_SHIP_COST$"
  MOD_LARGE_SPACE_FAUNA_SHIP_COST_MULT: "Large $SPACE_FAUNA_SHIP_COST$"
@@ -371,7 +373,7 @@
  primal_calling_shelter_modifier_tt: "$animal_handler_common_effect_desc$"
  primal_calling_shelter_bonus_tt: "[GetAnimalHandlerContext]\n- $GET_UNIQUE_EDICT$, ['edict:creature_welfare']"
  triggered_opinion_primal_calling_origin: "$primal_calling_shelter_modifier$"
- trophy_hunter_common_effect_desc: "- Gain ['concept_dna', $genetic_material_w_icon$] and culling rewards by killing Space Fauna in combat\n- §G$@primal_calling_fauna_kill_unity_reward|0$§! $r_unity$ and harvest rewards when killing Space Fauna"
+ trophy_hunter_common_effect_desc: "- Gain $c_dna$ and culling rewards by killing Space Fauna in combat\n- §G$@primal_calling_fauna_kill_unity_reward|0$§! $r_unity$ and harvest rewards when killing Space Fauna"
  primal_calling_hunt_modifier: "Big Game Hunters"
  primal_calling_hunt_modifier_tt: "$trophy_hunter_common_effect_desc$"
  primal_calling_hunt_bonus_tt: "[GetTrophyHunterContext]\n- $GET_UNIQUE_EDICT$, ['edict:crack_the_whip']"
@@ -684,7 +686,7 @@
  tech_voidworm_immunity: "วิธีรักษาโรคติดเชื้อปรสิต Voidworm"
  tech_voidworm_immunity_desc: "We can develop a cure for Voidworm parasitic infection. All of our colonies would be rendered immune to their current strain of spore bombardment."
  tech_voidworm_immunity_effect: "อาณานิคมปลอดภัยจากการถูกโจมตี(ทิ้งระเบิด)ของ Voidworm ได้\n$mod_damage_vs_country_type_voidworms_mult$: §G+$@vaccine_damage_vs_country_type_voidworms_mult|0%$§!"
- tech_voidworm_immunity_effect_during_situation: "$tech_voidworm_immunity_effect$\nAdvances the §Y$situation_voidworm_plague$§! Situation by §G+$@vaccine_situation_advancement|0$§!"
+ tech_voidworm_immunity_effect_during_situation: "§RBombardment immunity is ineffective during the Voidworm Plague.§!\n$mod_damage_vs_country_type_voidworms_mult$: §G+$@vaccine_damage_vs_country_type_voidworms_mult|0%$§!\nAdvances the §Y$situation_voidworm_plague$§! Situation by §G+$@vaccine_situation_advancement|0$§!"
  voidworm_nest: "Voidworm Nest"
  voidworm_nest_plural: "Voidworm Nests"
  voidworm_broken_nest: "Destroyed Voidworm Nest"
@@ -929,7 +931,7 @@
  leader_trait_cutholoid_victim: "Cutholoid Victim"
  leader_trait_cutholoid_victim_desc: "This leader was trapped for some time in the digestive system of a spaceborne Cutholoid. While no longer whole of body, they have gained some unique insight into molecular Biology."
  REMOVE_SPECIMEN_EFFECT: "Removes ['concept_specimen'] $NAME|Y$"
- GIVE_DNA_EFFECT: "Give $RARITY$ $CATEGORY$ ['concept_dna', $genetic_material_w_icon$]"
+ GIVE_DNA_EFFECT: "Give $RARITY$ $CATEGORY$ $c_dna$"
  REFRESH_LEADER_POOL_EFFECT: "Refresh Leader Pool"
  CULL_VIVARIUM_FAUNA_EFFECT: "Resources gained from culled fauna in our Vivarium: $RESOURCES$"
  UNLOCK_EXHIBIT_EFFECT: "Display an exhibit"
@@ -1008,13 +1010,13 @@
  CULL: "Cull"
  CULL_SPECIMEN: "Cull Specimen?"
  CULL_SPECIMEN_DESC: "This will destroy the selected creature.\nYou will gain:\n$CULL_RESULT$"
- CULL_SPECIMEN_TT: "The euthanization and subsequent dissection of captured and bred §YSpace Fauna§! allows us to gather research, materials, and §Y$genetic_material_w_icon$§!."
+ CULL_SPECIMEN_TT: "The euthanization and subsequent dissection of captured and bred §YSpace Fauna§! allows us to gather research, materials, and $y_dna$."
  AUTO_CULL: "Auto-Culling"
  AUTO_CULL_SETTINGS: "Auto-Culling Priority"
  AUTO_CULL_TT: "Choose which §YSpace Fauna§! species will be automatically culled for resources when §Y$vivarium$§! Capacity becomes full."
  AUTO_CULL_KEEP_BELOW_REQS: "Do not cull below breeding minimums"
  UNLOCKED_DNA: "$RARITY$ $NAME$ £genetic_material£"
- UNLOCKED_DNA_TT: "§Y$genetic_material_w_icon$§! allows us to clone spaceborne organisms for use as military fleets with ['technology:tech_alien_cloning', £society£$tech_alien_cloning$]. Higher grade space fauna have increased combat statistics, and a higher culling reward."
+ UNLOCKED_DNA_TT: "$c_dna$ allows us to clone spaceborne organisms for use as military fleets with £society£ ['technology:tech_alien_cloning']. Higher grade space fauna have increased combat statistics, and a higher culling reward."
  CULLING_STAT_LABEL: "Culling: "
  RARITY_TYPE_SUFFIX: " ($RARITY$)"
  CRITTER_CATEGORY_TOOLTIP: "Species Information:"
@@ -1026,20 +1028,22 @@
  CRITTER_CATEGORY_HABITAT_TT: "Preferred habitat: $HABITAT|H$"
  CRITTER_CATEGORY_CULL_REWARD_TT: "Culling reward: $RESOURCE|H$"
  MESSAGE_NEW_GENETIC_MATERIAL_TITLE: "New Genetic Material Acquired"
- MESSAGE_NEW_GENETIC_MATERIAL_DESC: "We have obtained $RARITY$ $CATEGORY$ $genetic_material_w_icon$."
+ MESSAGE_NEW_GENETIC_MATERIAL_DESC: "We have obtained $RARITY$ $CATEGORY$ $w_dna$."
  VIVARIUM_CRITTER_NOTIFICATION_ENTRY: " - $RARITY$ §Y$CATEGORY$§!"
  CULLING_RESOURCES_GAINED: "Resources gained:"
- RESOURCES_GAINED_TT: "Cull §YSpace Fauna§! in order to gain research, resources and new §Y$genetic_material_w_icon$§! for cloning them in §YHatcheries§!."
+ RESOURCES_GAINED_TT: "Cull §YSpace Fauna§! in order to gain research, resources and new $y_dna$ for cloning them in §YHatcheries§!."
  LAST_YEAR_SUMMARY: "Last Year: $RESOURCES$"
  LAST_MONTH_SUMMARY: "Last Month: $RESOURCES$"
  LAST_YEAR_CULLED_TT: "The total amount of resources gained from culling §YSpace Fauna§! in the last year."
  LAST_MONTH_CULLED_TT: "The total amount of resources gained from culling §YSpace Fauna§! in the last month."
- genetic_material: "Genetic Material"
- genetic_material_w_icon: "£genetic_material£ $genetic_material$"
+ genetic_material: "พันธุวัสดุ (วัสดุทางพันธุกรรม)"
  sm_hatchery: "Hatchery"
  sm_hatchery_plural: "Hatcheries"
- sm_hatchery_desc: "Hatcheries incubate §YSpace Fauna§! ['concept_dna', $genetic_material_w_icon$] we have collected and produce viable new specimens under our control. We can produce more powerful creatures by collecting more advanced genetic samples with our ['technology:tech_gravity_wells', £physics£$tech_gravity_wells$]."
+ sm_hatchery_desc: "Hatcheries incubate §YSpace Fauna§! $c_dna$ we have collected and produce viable new specimens under our control. We can produce more powerful creatures by collecting more advanced genetic samples with our ['technology:tech_gravity_wells', £physics£$tech_gravity_wells$]."
  shatchery: "$sm_hatchery$"
+ sm_orbital_ring_hatchery: "Orbital Hatchery"
+ sm_orbital_ring_hatchery_desc: "$sm_hatchery_desc$"
+ sorbital_ring_hatchery: "$sm_orbital_ring_hatchery$"
  STARBASE_HATCHERY_TAB: "$sm_hatchery$"
  STARBASE_HATCHERY_CAPACITY: "Hatcheries: $COUNT|Y$"
  STARBASE_HATCHERY_CAPACITY_DESC: "The amount of Hatcheries controls how many creatures the Starbase can clone in parallel."
@@ -1051,12 +1055,17 @@
  sm_beastport_plural: "Beastports"
  sm_beastport_desc: "Beastports are specially modified Hatcheries that can both clone Space Fauna and construct basic Civilian Ships."
  sbeastport: "$sm_beastport$"
+ sm_orbital_ring_beastport: "Orbital Beastport"
+ sm_orbital_ring_beastport_desc: "$sm_beastport_desc$"
+ sorbital_ring_beastport: "$sm_orbital_ring_beastport$"
  STARBASE_BEASTPORT_TAB: "$sm_beastport$"
  STARBASE_BEASTPORT_CAPACITY: "Beastports: $COUNT|Y$"
  STARBASE_BEASTPORT_CAPACITY_DESC: "The amount of Beastports controls how many Space Fauna and civilian ships the Starbase can clone in parallel."
  BEASTPORT_QUEUE: "Beastport Queue"
  sm_vivarium_tank: "Vivarium Tank"
  sm_vivarium_tank_desc: "External tanks partially exposed to space that can safely house captured §YSpace Fauna§!."
+ sm_orbital_ring_vivarium_tank: "Orbital Vivarium Tank"
+ sm_orbital_ring_vivarium_tank_desc: "$sm_vivarium_tank_desc$"
  artifact_analysis: "Artifact Analysis"
  artifact_analysis_desc: "Not all of the artifacts we have collected are as mundane as first suspected. With some critical analysis, we can filter out the more interesting objects."
  artifact_analysis_max_usages_reached: "$TRIGGER_FAIL$§RYou have reached the maximum number of uses for this action.§!"
@@ -1118,6 +1127,7 @@
  r_the_pattern_maker_desc: "This ancient calculator has an unrivaled ability to monitor dynamic trajectories and predict how objects such as enemy ships will behave. The data patterns generated from its prediction algorithms are as deeply layered as a master architect's designs. When given sufficient power and materials, it can produce a specialized scouting vessel equipped with high-powered sensors."
  r_the_pattern_maker_effect_tt: "Creates a §YPatternwalker§! Class Scout Ship.\n - Very high speed and Hyperlane Detection Range"
  NAME_Patternwalker: "Patternwalker"
+ NAME_Patternwalker_Cloak: "$NAME_Patternwalker$"
  SENSOR_PATTERNWALKER: "Seer-Pattern Sensors"
  r_vaporous_mega_orchid: "Vaporous Mega-Orchid"
  r_vaporous_mega_orchid_desc: "This particularly massive orchid blooms only once every 50 years. Its aroma has been shown to have an mollifying effect, temporarily blocking the mental synapses that cause aggression and distrust."
@@ -1475,7 +1485,7 @@
  civic_corporate_beastmasters: "Space Ranchers"
  civic_corporate_beastmasters_desc: "Originally an elite guild of animal ranchers, this Megacorporation has developed the technology to raise and care for the voidborne creatures in its home system."
  civic_beastmasters_common_effects_1: "- $ADDITONAL_TECHNOLOGIES_STRING$$TABBED_NEW_LINE$- ['technology:tech_gravity_wells', £physics£$tech_gravity_wells$]$TABBED_NEW_LINE$- ['technology:tech_alien_cloning', £society£$tech_alien_cloning$]\n- $AVAILABLE_STARBASE_BUILDINGS$ ['concept_beastport', Beastports]\n- $HOME_SYSTEM$ Start with a ['concept_beastport']\n- Starting corvettes are replaced with Space Amoebas"
- civic_beastmasters_common_effects_2: "- ['concept_dna', Starting $genetic_material_w_icon$]:$TABBED_NEW_LINE$- §0Common§! Space Amoeba"
+ civic_beastmasters_common_effects_2: "- Starting $c_dna$:$TABBED_NEW_LINE$- §0Common§! Space Amoeba"
  civic_beastmasters_effects: "$civic_beastmasters_common_effects_1$\n$civic_beastmasters_common_effects_2$"
  civic_cordyceptic_beastmasters_effects: "$civic_beastmasters_common_effects_1$$TABBED_NEW_LINE$- Will start with §YCloned Space Amoeba§! instead of §YUndead Space Amoeba§!\n$civic_beastmasters_common_effects_2$"
  councilor_beastmasters: "Beastlord"
@@ -1634,6 +1644,7 @@
  adventure_calls_modifier: "Adventure Calls"
  adventure_calls_rift_modifier: "$adventure_calls_modifier$"
  mod_voidworm_nymph_chance_on_bombardment: "Chance to generate an additional §YVoidworm Nymph§! when bombarding a Colony"
+ mutated_voidworms_scaling: "Mutated Voidworms Scaling"
  dummy_modifier_starbase_shipyard_artificial_build_cost_mult: ""
  pirate.1.name.treasure_hunters: "The Spread of Space Piracy"
  pirate.1.desc.black_needle: "It is likely that the §Y$NAME_BlackNeedle$§! has inspired this illicit activity, and may even be supporting these opportunistic privateers."
@@ -1659,7 +1670,7 @@
  grand_archive.8025.name: "$NAME_CaptainHoo$ of the $NAME_BlackNeedle$"
  grand_archive.8025.desc: "§HDistinguished and haughty, this outlaw captain feigns disinterest. He looks down his beak when speaking and refuses to meet our gaze, as if we are unworthy of his full attention. He gesticulates with his feathers in an inadvertently comical manner.§!\n\nYou have crossed the path of the §Y$NAME_BlackNeedle$§!, a blunder on your part!\n\nWe caught wind of a rumor that your burgeoning little society would be exploring this system. You have stumbled upon a chart that clearly belongs to us. Hand it over, lest things become violent."
  grand_archive.8025.a: "Who are you?"
- grand_archive.8025.a.reply: "Hoo I am! My name is Glimarhoo Zelmendrion, but you may refer to me as §Y$NAME_CaptainHoo$§!, Second Mate Lieutenant of the illustrious §Y$NAME_BlackNeedle$§! pirates. We have had our feathers in every variety of illicit dealings for thousands of years, and I am but one thread in the majestic tapestry of our legacy.\n\nYou would do well to remember my name, as I expect a significant bounty after presenting this chart to our peerless leader."
+ grand_archive.8025.a.reply: "Hoo I am! My name is Glimarhoo Zelmendrion, but you may refer to me as §Y$NAME_CaptainHoo$§!, Captain of the Silverwing and Second Mate Lieutenant of the illustrious §Y$NAME_BlackNeedle$§! pirates. We have had our feathers in every variety of illicit dealings for thousands of years, and I am but one thread in the majestic tapestry of our legacy.\n\nYou would do well to remember my name, as I expect a significant bounty after presenting this chart to our peerless leader."
  grand_archive.8025.b: "What do you know of the chart?"
  grand_archive.8025.b.reply: "A talented, and very expensive, information broker informed us that you recently stumbled upon a peculiar capsule... A capsule that is supposed to contain directions to a hidden system of great interest to us.\n\nWe ourselves have also claimed a piece of the chart, but it is useless without the data from your capsule. I cannot fathom why §Y$NAME_CaptainNess$§! would give you the key to her legacy, but it falls to us to relieve you of it."
  grand_archive.8025.c: "Why do you want this chart so badly?"
@@ -2117,10 +2128,12 @@
  REANIMATED_FLEET_VERY_LARGE: "very large"
  REANIMATED_FLEET_VAST: "vast"
  MOD_SPACE_FAUNA_REANIMATION_COST_MULT: "Space Fauna Reanimation Cost"
- MOD_ATTACHED_SPACE_FAUNA_COMPONENT_DAMAGE_MULT: "Space Fauna Ship Component and Mutation Damage"
+ concept_space_fauna_ship_component: "Space Fauna Ship Component"
+ concept_space_fauna_ship_component_desc: "Space Fauna Ship Components are those obtained by researching special projects on various Space Fauna. Any bonus applied to these will also be applied when equipped as a §HMutation§! on Space Fauna. Examples of these components include, but are not limited to:\n- §H$SPACE_WHALE_WEAPON_1$§!\n- §H$AMOEBA_STRIKE_CRAFT$§!"
+ MOD_ATTACHED_SPACE_FAUNA_COMPONENT_DAMAGE_MULT: "['concept_space_fauna_ship_component', Space Fauna Ship Component] Damage"
  ATTACHED_SPACE_FAUNA_COMPONENT_TT_DMG_DECREASED: "$MOD_ATTACHED_SPACE_FAUNA_COMPONENT_DAMAGE_MULT$: §R-$VALUE|%0$§!"
  ATTACHED_SPACE_FAUNA_COMPONENT_TT_DMG_INCREASED: "$MOD_ATTACHED_SPACE_FAUNA_COMPONENT_DAMAGE_MULT$: §G+$VALUE|%0$§!"
- MOD_ATTACHED_SPACE_FAUNA_COMPONENT_FIRE_RATE_MULT: "Space Fauna Ship Component and Mutation Fire Rate"
+ MOD_ATTACHED_SPACE_FAUNA_COMPONENT_FIRE_RATE_MULT: "['concept_space_fauna_ship_component', Space Fauna Ship Component] Fire Rate"
  ATTACHED_SPACE_FAUNA_COMPONENT_TT_FIRE_RATE_DECREASED: "$MOD_ATTACHED_SPACE_FAUNA_COMPONENT_FIRE_RATE_MULT$: §R-$VALUE|%0$§!"
  ATTACHED_SPACE_FAUNA_COMPONENT_TT_FIRE_RATE_INCREASED: "$MOD_ATTACHED_SPACE_FAUNA_COMPONENT_FIRE_RATE_MULT$: §G+$VALUE|%0$§!"
  CREATURE_DESIGNER: "สัตว์อวกาศ"
