--- a/mod/thmod/localisation/english/grand_archive_specimens_l_english.yml
+++ b/mod/thmod/localisation/english/grand_archive_specimens_l_english.yml
@@ -440,9 +440,9 @@
  megacorpse_hyperguitar: "Megacorpse Hyper-Guitar"
  megacorpse_hyperguitar_desc_short: "The remains of a string instrument used by the psionic-metal group known as Megacorpse"
  megacorpse_hyperguitar_desc_details: "The device was said to be forged within the Shroud and was originally intended to be used as a sonic weapon. Wielded by performance frontbeing Kel-Azaan, its music captured the minds of billions before being shattered on [Root.GetName], destroying the entire audience in a blaze of glory. The associated album has since been banned in most systems."
- memorial_for_bubbles: "Memorial for [prev.GetName]"
- memorial_for_bubbles_desc_short: "After years of loyal service, [prev.GetName] passed away, leaving an amoeba-sized hole in [this.GetName] that can not be filled"
- memorial_for_bubbles_desc_details: "Not only was [prev.GetName] a loyal defender, but they were a shining example of what is possible when the best of [this.GetAdjective] values are brought to light. They are gone, but not forgotten."
+ memorial_for_bubbles: "Memorial for [from.GetName]"
+ memorial_for_bubbles_desc_short: "After years of loyal service, [from.GetName] passed away, leaving an amoeba-sized hole in [this.GetName] that can not be filled"
+ memorial_for_bubbles_desc_details: "Not only was [from.GetName] a loyal defender, but they were a shining example of what is possible when the best of [this.GetAdjective] values are brought to light. They are gone, but not forgotten."
  memorial_stone: "Memorial Stone"
  memorial_stone_desc_short: "A commemorative stone created in memoriam of a tragic accident"
  memorial_stone_desc_details: "Over-eager mining operations on the station known as Selika caused the asteroid it was mounted on to collapse inward. The station split apart, inflicting a vast number of casualties among the miners. This fragment of the asteroid was kept, with "Selika" carved onto it in memory of the lives lost."
