--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -1658,7 +1658,7 @@
  mod_country_consumer_goods_cost_mult:0 "ค่าบำรุงรักษาที่เป็นสินค้าอุปโภคบริโภค"
  contact_with_MSI_01:1 "Troubled Past"
  contact_with_MSI_02:1 "$contact_with_MSI_01$"
- MOD_PHYSICS_TECH_COST_MULT: "Research Cost (£physics£ §YPhysics§!)"
- MOD_SOCIETY_TECH_COST_MULT: "Research Cost (£society£ §YSociety§!)"
- MOD_ENGINEERING_TECH_COST_MULT: "Research Cost (£engineering£ §YEngineering§!)"
+ MOD_PHYSICS_TECH_COST_MULT: "ค่าใช้จ่ายในการวิจัย (£physics£ §Yฟิสิกส์§!)"
+ MOD_SOCIETY_TECH_COST_MULT: "ค่าใช้จ่ายในการวิจัย (£society£ §Yสังคม§!)"
+ MOD_ENGINEERING_TECH_COST_MULT: "ค่าใช้จ่ายในการวิจัย (£engineering£ §Yวิศวกรรม§!)"
  mod_megastructure_dismantle_refund_mult: "ได้คืนค่าสิ่งก่อสร้างขนาดมหึมา"
