--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -19,18 +19,21 @@
  PLANET_COMBAT_WIDTH:0 "ความกว้างแนวรบของดาวเคราะห์: $VALUE|H$"
  MINIMUM_COMBAT_WIDTH:0 "ความกว้างแนวรบขั้นต่ำ: $VALUE|H$"
  MOD_PLANET_COMBAT_WIDTH_ADD:0 "ความกว้างแนวรบของดาวเคราะห์"
- empire_capital_world:0 "Empire Capital"
- sector_capital_world:0 "Sector Capital"
+ empire_capital_world:0 "ศูนย์กลางจักรวรรดิ"
+ sector_capital_world:0 "ศูนย์กลางเซ็กเตอร์"
  TOO_CLOSE_TO_ANOTHER_SECTOR_CAPITAL:0 "Sector Capitals need to be at least 5 jumps apart."
  EXPERIENCE_GAIN_RATE_TITLE:0 "§Eอัตราการได้รับประสบการณ์:§!"
  DISMISS_LEADER_COST:0 "§Gค่าใช้จ่าย: $COST$§!"
  CAN_NOT_AFFORD_DISMISSING_LEADER:0 "§RCan't afford the cost of $COST$§!"
  RECRUIT_LEADER_AT_CAP_TITLE:0 "ผู้นำเต็มความจุ"
  RECRUIT_LEADER_AT_CAP_DESC:1 "การสรรหาผู้นำรายนี้จะทำให้ผู้นำของคุณเกินเพดานความจุ เพิ่มโทษค่าบำรุงรักษาและค่าประสบการณ์ที่ได้รับสำหรับผู้นำทุกคนของคุณ\n\nตอนนี้ผู้นำรายนี้จะมีค่าใช้จ่าย $COST|Y$ และพื้นฐาน §Y[Root.GetUpkeep]§! ต่อเดือน"
+ RECRUIT_LEADER_AT_CAP_DESC_NO_UPKEEP: "การแต่งตั้งผู้นำคนนี้จะทำให้จักรวรรดิคุณมีผู้นำเกินขีดจำกัดความจุ โดยจะเพิ่มโทษค่าบำรุงรักษาและการเพิ่มค่าประสบการณ์ของผู้นำทุกคนของคุณ\n\nผู้นำนี้จะมีค่าใช้จ่าย $COST|Y$"
  RECRUIT_LEADER_ALREADY_OVER_CAP_TITLE:0 "จำนวนผู้นำเกินความจุ"
  RECRUIT_LEADER_ALREADY_OVER_CAP_DESC:1 "ผู้นำคุณเกินขีดจำกัดแล้ว การสรรหาผู้นำรายนี้จะเพิ่มโทษค่าบำรุงรักษาและค่าประสบการณ์ที่ได้รับสำหรับผู้นำของคุณ\n\nตอนนี้ผู้นำรายนี้จะมีค่าใช้จ่าย $COST|Y$ และพื้นฐาน §Y[Root.GetUpkeep]§! ต่อเดือน"
+ RECRUIT_LEADER_ALREADY_OVER_CAP_DESC_NO_UPKEEP: "ผู้นำคุณเกินขีดจำกัดแล้ว การสรรหาผู้นำรายนี้จะเพิ่มโทษค่าบำรุงรักษาและค่าประสบการณ์ที่ได้รับสำหรับผู้นำของคุณ\n\nตอนนี้ผู้นำรายนี้จะมีค่าใช้จ่าย $COST|Y$"
  RECRUIT_LEADER_TITLE:0 "แต่งตั้งผู้นำ?"
  RECRUIT_LEADER_DESC:0 "สรรหาผู้นำในจักรวรรดิของคุณ\n\nผู้นำคนนี้มีค่าใช้จ่าย $COST|Y$ และค่าตอบแทน §Y[Root.GetUpkeep]§! ต่อเดือน"
+ RECRUIT_LEADER_DESC_NO_UPKEEP: "สรรหาผู้นำในจักรวรรดิของคุณ\n\nผู้นำคนนี้มีค่าใช้จ่าย $COST|Y$"
  TOTAL_LEADER_COST:0 "ทั้งหมด: $COST$"
  LEADER_AGE_UNKNOWN:0 "§Y???§!"
  LEADER_AGE_STRING:0 "$AGE|Y$"
@@ -125,7 +128,7 @@
  COUNCIL_AGENDA_LASTS_FOR:0 "กินเวลานาน £time£$TIME$"
  LEADER_ASSIGNMENT:0 "เลือกผู้นำ"
  CLICK_TO_RECRUIT_AND_ASSIGN:0 "คลิกเพื่อสรรหาและแต่งตั้ง"
- DISMISS_LEADER_COST_DESC:0 "Dismissing this leader will cost $COST$"
+ DISMISS_LEADER_COST_DESC:0 "การปลดผู้นำคนนี้ออกจะมีค่าใช้จ่าย $COST$"
  CLICK_TO_ASSIGN_LEADER:1 "§Gคลิกเพื่อแต่งตั้ง§!"
  can_not_dismiss_rulers:1 "§Rไม่สามารถปลดผู้ปกครองได้§!"
  NO_CLASS_LEADER_AVAILABLE:0 "No Leader of class $CLASS|Y$ available"
