--- a/mod/thmod/localisation/english/plantoids_l_english.yml
+++ b/mod/thmod/localisation/english/plantoids_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
  PLANTOID_TITLE: "Plantoids Species Pack"
+ DLC_PLANTOID_RECOMMENDATION_DESC:1 "§SPlantoid Species Pack§! is a DLC containing portraits of sentient plants, putting down roots across the galaxy."
+ DLC_PLANTOID_RECOMMENDATION_PLANTS_REC:1 "We're recommending §SPlantoid Species Pack§! as this empire suits its botanical theme."
  feeding_station: "สวนผลไม้"
  feeding_station_plural: "สวนผลไม้"
  origin_fruitful: "หุ้นส่วนที่ออกดอกออกผล"
