--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -1,5 +1,9 @@
 ﻿l_english:
  UTOPIA_TITLE: "Utopia"
+ DLC_UTOPIA_RECOMMENDATION_DESC:1 "The §SUtopia§! expansion allows for finer control of your empire, and enables the building of Megastructures."
+ DLC_UTOPIA_RECOMMENDATION_REASON_HIVEMIND_REC:1 "We're recommending §SUtopia§! as the makeup of this empire suits its new empire type, the Hive Mind."
+ DLC_UTOPIA_RECOMMENDATION_REASON_UNIFY_POLICE_REC:1 "We're recommending §SUtopia§! as the makeup of this empire suits its mechanics and content, centered on unifying or policing one's population."
+ DLC_UTOPIA_RECOMMENDATION_REASON_SLAVERY_REC:1 "We're recommending §SUtopia§! as the makeup of this empire complements its its population control and workforce optimization mechanics."
  MEGASTRUCTURE_MODIFIERS:0 "การปรับเปลี่ยนของสิ่งก่อสร้างขนาดมหึมา"
  BUILD_MEGASTRUCTURE_WITHIN_INNER_CIRCLE:0 "§RCannot build this Megastructure within a system's gravity well§!"
  BUILD_MEGASTRUCTURE_CANT_BUILD_ON_PLANET:0 "§RCannot build this Megastructure on a planet§!"
