--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
  APOCALYPSE_TITLE: "Apocalypse"
+ DLC_APOCALYPSE_RECOMMENDATION_DESC:0 "§SApocalypse§! is an expansion that enhances the destruction and ravages of galactic war."
+ DLC_APOCALYPSE_RECOMMENDATION_REASON_WARFARE_REC:1 "We're recommending §SApocalypse§! as some of the variables selected for this empire suit its warfare-focused mechanics and content."
  FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_CRACKER:0 "Preparing to crack $PLANET|Y$"
  FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_SHIELDER:0 "Preparing to shield $PLANET|Y$"
  FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_NUKE:0 "Preparing to nuke $PLANET|Y$"
@@ -112,7 +114,7 @@
  STARBASE_DOWNGRADE_ALREADY_LOWEST_LEVEL:0 "§RThis Starbase cannot be downgraded any further!§!"
  STARBASE_DISMANTLE_AT_WAR:1 "§RCannot dismantle Starbases while at war§!"
  STARBASE_RETURN_CONTROL_IS_OWNER:0 "§Rเราเป็นเจ้าของฐานอวกาศนี้§!"
- STARBASE_RETURN_CONTROL_IS_CONTROLLER:0 "§RWe do not control this Starbase§!"
+ STARBASE_RETURN_CONTROL_IS_NOT_CONTROLLER:0 "§RWe do not control this Starbase§!"
  STARBASE_DOWNGRADE_IN_COMBAT:0 "§Rไม่สามารถดาวน์เกรดฐานอวกาศที่กำลังถูกโจมตีได้§!"
  STARBASE_DEFENSE_UPGRADE_IN_COMBAT:0 "Cannot upgrade Starbase defense platforms while the Starbase is engaged in combat"
  STARBASE_IS_DISABLED:0 "§RThe Starbase is disabled§!"
