--- a/mod/thmod/localisation/english/aquatics_l_english.yml
+++ b/mod/thmod/localisation/english/aquatics_l_english.yml
@@ -1,5 +1,9 @@
 ﻿l_english:
  AQUATICS_TITLE: "Aquatics Species Pack"
+ DLC_AQUATICS_RECOMMENDATION_DESC:0 "Aquatics provides a sea of new choices, where you can discover new life where you least expect it. Let a wave of new customizable options for your empire crash into Stellaris, with a treasure trove of new species portraits, ship set, origins and more."
+ DLC_AQUATICS_RECOMMENDATION_COSMETICS:0 "We're recommending Aquatics as we've noticed that you're a fan of cosmetic packs."
+ DLC_AQUATICS_RECOMMENDATION_MOL:0 "We're recommending Aquatics as we've noticed that you enjoy fishy looks."
+ DLC_AQUATICS_RECOMMENDATION_OCEAN:0 "We're recommending Aquatics as it opens up new possibilities for living on Ocean Worlds."
  vo_aquatics_voice:0 "น้ำ"
  trait_aquatic:0 "อยู่ใต้น้ำ"
  trait_aquatic_desc:1 "§LThis species is perfectly adapted to living in the depths of the ocean. However, on dry land, it is like a fish out of water.§!\n\n§Rต้องมี§! §Yดาวมหาสมุทร§! §Rเป็นดาวบ้านเกิด§!"
