--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
  FIRST_CONTACT_TITLE: "First Contact Story Pack"
+ DLC_FIRST_CONTACT_RECOMMENDATION_DESC:0 "§SFirst Contact§! is a story pack that explores early encounters with pre-FTL civilizations. This story pack also introduces Cloaking technology!"
+ DLC_FIRST_CONTACT_RECOMMENDATION_REC_DIPLO:0 "We're recommending §SFirst Contact§! as the new features contained in this story pack make interactions with pre-FTL societies more dynamic and engaging."
+ DLC_FIRST_CONTACT_RECOMMENDATION_REC:0 "We're recommending §SFirst Contact§! as some of the variables you've selected suit its content. This story pack focuses on diplomacy, espionage, and observing the development of pre-FTL civilizations."
  NAME_MSI_country:0 "Minamar Specialized Industries"
  NAME_MSI_country_initials:0 "MSI"
  NAME_MSI_species:0 "Olinbar"
@@ -964,7 +967,7 @@
  origin.6235.a:0 "It seems ours is not the only attractive world in [from.Target.GetStarName] anymore."
  origin.6240.name:0 "[fotd_seperatist_planet.GetName] Terraforming Perfection"
  origin.6240.desc.changedhome:0 "Perhaps inspired by our own successes in terraforming, the inhabitants of [fotd_seperatist_planet.GetName] have sculpted their world into a thing of true beauty. The previously bountiful [From.Target.GetClassName] has become a Gaia World. The inhabitants can continue to hide from the galaxy in paradise."
- origin.6240.desc.notchangedhome:0 "Humiliating news from [fotd_seperatist_planet.GetName]: the inhabitants have managed to transcend the limits of [home_planet.GetName]. By discarding the form of a [From.Target.GetClassName], they have created a Gaia World. Many of our own people question why they should continue to live here, when a paradise exists on their doorstep."
+ origin.6240.desc.notchangedhome:0 "Humiliating news from [fotd_seperatist_planet.GetName]: the inhabitants have managed to transcend the limits of [home_planet.GetName]. By discarding the form of a [From.GetClassName], they have created a Gaia World. Many of our own people question why they should continue to live here, when a paradise exists on their doorstep."
  origin.6240.a.changedhome:0 "It's only natural to want to improve one's home."
  origin.6240.a.notchangedhome:0 "[fotd_seperatist_planet.GetName] tarnishes our sky."
  origin.6260.name:0 "Vigil"
