--- a/mod/thmod/localisation/english/humanoids_l_english.yml
+++ b/mod/thmod/localisation/english/humanoids_l_english.yml
@@ -1,2 +1,4 @@
 ﻿l_english:
  HUMANOIDS_TITLE: "Humanoids Species Pack"
+ DLC_HUMANOID_RECOMMENDATION_DESC:2 "§SHumanoid Species Pack§! is a DLC adding further variety to humanoid portraits and ship models."
+ DLC_HUMANOID_RECOMMENDATION_HUMAN_REC:1 "We're recommending §SHumanoid Species Pack§! as it brings greater variety to empires like this one."
