--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -1649,8 +1649,8 @@
  SECTOR_MINERALS_STOCKPILE_DESC:0 "This is the amount of stored Minerals in the Sector. It is automatically used for construction."
  EMPIRE_CAPITAL:0 "ศูนย์กลางจักรวรรดิ"
  EMPIRE_CAPITAL_DESC:0 "นี่คือศูนย์กลางจักรวรรดิของเรา"
- SECTOR_CAPITAL:0 "เซ็กเตอร์ศูนย์กลาง"
- SECTOR_CAPITAL_DESC:0 "นี่คือเซ็กเตอร์ศูนย์กลางจักรวรรดิ"
+ SECTOR_CAPITAL:0 "ศูนย์กลางเซ็กเตอร์"
+ SECTOR_CAPITAL_DESC:0 "นี่คือศูนย์กลางเซ็กเตอร์"
  PLANET_VIEW_DISCONNECTED:0 "Sector Disconnected"
  PLANET_VIEW_DISCONNECTED_DESC:0 "This planet has no connection to the Sector Capital, causing the following effect."
  PLANET_VIEW_STARVATION:0 "Starvation"
@@ -2866,8 +2866,8 @@
  extra_large:0 "ใหญ่เป็นพิเศษ"
  GALAXY_COLONIZABLE:0 "ดาวเคราะห์ที่อยู่อาศัยได้"
  rare:0 "หายาก"
- uncommon:0 "Uncommon"
- common:0 "Common"
+ uncommon:0 "ไม่ธรรมดา"
+ common:0 "ธรรมดา"
  WAITING_FOR_SERVER_ID:0 "Waiting for game server ID."
  WAITING_FOR_MATCHMAKING:0 "Waiting for matchmaking server.\nServerID: $SERVERID|H$"
  SERVER_ONLINE:0 "เซิร์ฟเวอร์ออนไลน์\nServerID: $SERVERID|H$"
@@ -12217,7 +12217,6 @@
  MATCHMAKING_SEARCH_CROSSPLAY_TOOLTIP:0 "Search for sessions from any distribution platform"
  MATCHMAKING_HOST_CROSSPLAY_TOOLTIP:0 "Available for discovery from any distribution platform"
  MATCHMAKING_HOST_ALLOW_COOP_TOOLTIP:0 "อนุญาตให้สร้างจักรวรรดิ Co-op"
- FE_IRONMAN_NO_POPS:0 "§RIronman requires the user to be logged in with Paradox account.§!"
  REINFORCEMENT_NAVAL_CAPACITY:0 "จำนวนยานในกองยาน: $NAVY_SIZE$\nจำนวนยานในกองยานหลังการเสริมกำลัง: $REINFORCED_NAVY_SIZE$\nความจุของยานรบ : $CAPACITY|Y$"
  DEBUG_AI_STRATEGY_SYSTEM_ASSIGNED_INSTANT:0 "AI military minister has prioritized targets in $SYSTEM|Y$ with the following fleets:\n\n"
  DEBUG_AI_STRATEGY_SYSTEM_UNASSIGNED_INSTANT:0 "AI military minister has targets in $SYSTEM|Y$ but has currently no fleets assigned to them.\n"
@@ -12453,7 +12452,7 @@
  USING_NAME_LIST:0 "ใช้รายชื่อหมวดหมู่ §Y$CATEGORY$§!"
  NOT_USING_NAME_LIST:0 "ไม่ใช้รายชื่อหมวดหมู่ §Y$CATEGORY$§!"
  HIDE_UNOWNED_CONTENT:0 "ซ่อนเนื้อหาที่ไม่ได้เป็นเจ้าของ"
- MOD_VERSION:0 "Mod v0.75.1, Update 07/11/2024"
+ MOD_VERSION:0 "Mod v0.75.2, Update 07/12/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Cosmic Storm -> พายุคอสมิก,พายุอวกาศ \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons, Overlord, The Machine Age, Cosmic Storms \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
