--- a/mod/thmod/localisation/english/toxoids_l_english.yml
+++ b/mod/thmod/localisation/english/toxoids_l_english.yml
@@ -1,5 +1,11 @@
 ﻿l_english:
  TOXOIDS_TITLE: "Toxoids Species Pack"
+ DLC_TOXOIDS_RECOMMENDATION_DESC:1 "In §SToxoids§!, stake your claim with the hardiest, most stubborn species in Stellaris' history! Exploit toxic worlds, gamble the future of your planets for immediate gains, and make the tough sacrifices necessary to survive a hostile galaxy."
+ DLC_TOXOIDS_RECOMMENDATION_COSMETICS:1 "We're recommending Toxoids as we've noticed that you're a fan of cosmetic packs."
+ DLC_TOXOIDS_RECOMMENDATION_POST_APOCALYPTIC:1 "We're recommending Toxoids as you've selected an empire with an apocalyptic theme."
+ DLC_TOXOIDS_RECOMMENDATION_ENVIRONMENTALIST:1 "We're recommending Toxoids as an alternative to the empire you have selected, given its relationship with the natural environment."
+ DLC_TOXOIDS_RECOMMENDATION_WASTEFUL_ADAPTIVE:1 "We're recommending Toxoids as your species suits its themes of wastefulness and adaptability."
+ DLC_TOXOIDS_RECOMMENDATION_VOID_DWELLERS:1 "We're recommending Toxoids as the $origin_toxic_knights$ origin adds new habitat-based gameplay."
  origin_toxic_knights:0 "อัศวินของเทพทรพิษ"
  origin_toxic_knights_desc:2 "เมื่อหลายทศวรรศก่อน มีเอนทิตี้ เคยมาเยือนและสร้างมหันตภัยที่ทำลายโลกไปครึ่งหนึ่ง เหลือไว้อีกครึ่งให้กับเหล่าพลเมืองที่บูชาเอนทิตี้นี้เป็นเทพทรพิษของพวกเขา ภาคีอัศวินได้ถูกก่อตั้งขึ้นเพื่อออกตามหาเทพของพวกเขาในอวกาศอันกว้างใหญ่นี้"
  origin_toxic_knights_effects:3 "- ดาวบ้านเกิด: $TABBED_NEW_LINE$- ['concept_toxic_features'] $TABBED_NEW_LINE$- ['concept_pc_habitat', ที่อยู่อาศัยวงโคจรดาว] ที่มีลักษณะเฉพาะ: $TABBED_NEW_LINE$$t$- ['concept_order_keep', £building£ $building_order_keep$] $TABBED_NEW_LINE$$t$- ['concept_orders_demesne', £district£ $district_orders_demesne$] $TABBED_NEW_LINE$$t$- งาน ['concept_politician', £job_politician£ $job_politician$] ถูกแทนที่ด้วย ['concept_order_jobs'] $NEW_LINE$- สถานการณ์: ['concept_knights_quest'] $NEW_LINE$- นโยบาย: §IKnightly Duties§! $NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_knight_commandery', £building£ Order's Commanderies] ในอาณานิคมของเมืองขึ้น"
